<resources>
    <string name="app_name">Clothes</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="emailHint">   Email</string>
    <string name="passwordHint">Password</string>
    <string name="loginText">Login</string>
    <string name="remember_userText">Remember user</string>
    <string name="no_account_yet_create_oneText">No account yet?  Create one</string>
    <string name="nameText">Name</string>
    <string name="repeat_passwordHint">Repeat password</string>
    <string name="date_of_birthText">Date of birth</string>
    <string name="descriptionText">Description</string>
    <string name="create_accountHint">Create Account</string>
    <string name="phone_numberHint">Phone number</string>
    <string name="interestedText">Interested</string>
    <string name="should_you_ever_need_a_calculator_this_tool_will_come_in_handyText">should you ever need a calculator, this tool will come in handy.</string>
    <string name="resultText">Result:</string>
    <string name="this_tool_is_meant_to_keep_you_save_and_sound_while_going_back_home_on_your_own_when_the_button_is_pressed_an_alarm_will_sound_through_the_speakersText">This tool is meant to keep you save and sound while going back home on your own. When the button is pressed, an alarm will sound through the speakers.</string>
    <string name="download_pdfText">DOWNLOAD PDF</string>
    <string name="you_may_now_click_the_image_to_open_the_fileText">You may now click the image to open the file.</string>
    <string name="its_location_is_in_downloads_folderText">Its location is in Downloads folder.</string>
    <string name="sendText">Send</string>
    <string name="doubleTapText">Press the back button once again to close the application.</string>
    <string name="welcome">Welcome</string>
    <string name="base_total_clothes">Total clothes:</string>
    <string name="generate_qr">Generate QR</string>
    <string name="add_cloth">Add cloth</string>
    <string name="amount">Amount</string>
    <string name="cannot_connect_to_server">Cannot connect to server</string>
    <string name="rewardNotificationTitle">Reward claimed!</string>
    <string name="reward_notification_message">Check your inbox for more information.</string>
    <string name="reward_deny">You don\'t have enough points</string>
    <string name="points">Points:</string>
    <string name="cannot_connect_to_server2">Cannot connet to server.</string>
    <string name="rewards">Rewards</string>
    <string name="address">address</string>
    <string name="warehousename">warehouseName</string>
    <string name="picture_uploaded">Profile picture succesfully uploaded</string>
    <string name="failed_picture_upload">Failed to upload profile picture</string>
    <string name="input_new_password">Input a new password</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="send">Send</string>
    <string name="password_change_failed">Failed to change password</string>
    <string name="password_not_match">Password do not match</string>
    <string name="password_updated">Password successfully updated!</string>
    <string name="cacel">Cancel</string>
    <string name="search_clothes">Search clothes</string>
    <string name="maxAmount">The maximum total amount is</string>
    <string name="errorQR">An ERROR has occurred generating QR code</string>
    <string name="donationQR">Donation QR</string>
    <string name="requestor">requestor</string>
    <string name="searchCloth">Search cloth</string>
    <string name="checkInformation">Checking information...</string>
    <string name="userAlreadyExist">User already exists</string>
    <string name="genderNotSelected">Gender not selected</string>
    <string name="dniNotValid">DNI is not valid</string>
    <string name="emailNotValid">The email is not valid</string>
    <string name="overAgeRequired">You must be over 18 years old.</string>
    <string name="fillUp">All fields must be filled up.</string>
    <string name="filledUp">All fields must be filled up.</string>
    <string name="passwordDontMatch">Password do not match.</string>
    <string name="backToLogin">Back to login</string>
    <string name="finish">Finish</string>
    <string name="userInUse">User already in use.</string>
    <string name="donor">donor</string>



    <string-array name="income">
        <item>15000</item>
        <item>25000</item>
        <item>35000</item>
        <item>45000</item>
        <item>55000</item>
    </string-array>

    <string-array name="members">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
</resources>
