<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
android:gravity="center"
    android:layout_height="match_parent"
    tools:context=".TwoFragment">
    <Button
        style="@style/buttonBig"
        android:id="@+id/btnDownload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="100dp"
        android:background="@color/colorPrimary"
        android:padding="16dp"
        android:text="@string/download_pdfText"
        android:textColor="#ffffff"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="216dp"
        android:layout_height="240dp"
        android:src="@drawable/pdf" />

    <TextView
        style="@style/textViewNormal"
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/you_may_now_click_the_image_to_open_the_fileText" />

    <TextView
        style="@style/textViewNormal"
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/its_location_is_in_downloads_folderText" />


</LinearLayout>