<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llAllQr"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="com.example.marti.projecte_uf1.AppActivity">

    <LinearLayout
        android:id="@+id/llFormQr"
        android:layout_width="250dp"
        android:layout_height="343dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/spinClothType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp" />

        <Spinner
            android:id="@+id/spinClothSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp" />

        <Spinner
            android:id="@+id/spinClothColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp" />

        <Spinner
            android:id="@+id/spinClothGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp" />


        <android.support.design.widget.TextInputLayout
            android:layout_width="100dp"
            android:layout_height="wrap_content"

            android:layout_marginBottom="20dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etClothQnt"
                style="@style/commonTextInputEditText"
                android:inputType="number"
                android:hint="@string/amount" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/addItemToList"
            style="@style/buttonBig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/add_cloth" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/totalClothes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="20dp"
                android:textSize="15sp"
                android:text="@string/base_total_clothes" />

            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/deleteClothes"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/delete"

                android:layout_gravity="center_horizontal"
                android:layout_marginStart="10dp"
                app:civ_circle_background_color="@color/colorAccent"
                app:civ_border_color="@color/colorAccent"
                app:civ_border_width="3dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/llShowQr"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible"
        tools:context="com.example.marti.projecte_uf1.AppActivity"
        tools:showIn="@layout/activity_main">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="265dp"
            android:src="@drawable/qrcode" />

        <Button
            android:id="@+id/generate_qr"
            style="@style/buttonBigSecondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/generate_qr" />


    </LinearLayout>
</LinearLayout>

